overflow fix

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -426,6 +426,7 @@ body {
 .coursenav-tile{
   text-align: left;
   font-size: 12px;
+  overflow: hidden;
 }
 .coursenav-tile >span{
   overflow: wrap;
